// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message DataMaskArg {
  string name = 1;
  string type = 2;
}

message DatamaskMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // Deprecated: preserved for backward compatibility, use args_v2 instead
  map<string, string> args = 1;
  string return_type = 2;
  string body = 3;
  optional string comment = 4;
  string create_on = 5;
  optional string update_on = 6;

  // New field that preserves argument order
  repeated DataMaskArg args_v2 = 7;
}

message MaskpolicyTableIdList {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  repeated uint64 ids = 1;
}